[metadata]
name = cmmvae
version = 0.1.2.dev2
description = A research project on conditional diagonal mixture-of-experts variational autoencoding (CMMVAE).
author = GVSU Applied Computing Institute
url = https://github.com/zdebruine/MMVAE

[options]
packages = find:
install_requires =
    torch
    torchvision
    torchaudio
    torchdata
    lightning
    tensorboard
    pulp==2.7.0
    snakemake==7.32.4
    omegaconf
    scipy
    cellxgene-census
    psutil
    tensorboard_plugin_profile
    jsonargparse[signatures]>=4.27.7

[options.extras_require]
test =
    pytest
    pytest-cov
doc =
    pdoc

[options.entry_points]
console_scripts =
    cmmvae = cmmvae.main:main